RBAC seed/query tweaks and hop logging config for sharedlib package